force-app/main/default/objects/Interview__c/fields/Cloud_Product__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Product__c</fullName>
    <label>Cloud Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AWS (Amazon Web Services) Cloud</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>IBM Cloud</fullName>
            </value>
            <value>
                <fullName>Microsoft Office 365</fullName>
            </value>
            <value>
                <fullName>Oracle Cloud</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>