force-app/main/default/objects/Interview__c/fields/Company_Agency__c.field-meta.xml
<CustomField>
    <fullName>Company_Agency__c</fullName>
    <label>Company/Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>