force-app/main/default/objects/Interview__c/fields/Complexity__c.field-meta.xml
<CustomField>
    <fullName>Complexity__c</fullName>
    <label>Complexity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch processing overnight</fullName>
            </value>
            <value>
                <fullName>Complex algorithm(s)</fullName>
            </value>
            <value>
                <fullName>Long-running processes that take hours</fullName>
            </value>
            <value>
                <fullName>Not applicable (N/A)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>