force-app/main/default/objects/Interview__c/fields/Database__c.field-meta.xml
<CustomField>
    <fullName>Database__c</fullName>
    <inlineHelpText>Do you have a database?</inlineHelpText>
    <label>Database</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not applicable (N/A)</fullName>
            </value>
            <value>
                <fullName>DynamoDB</fullName>
            </value>
            <value>
                <fullName>Elastic Search</fullName>
            </value>
            <value>
                <fullName>Firebase</fullName>
            </value>
            <value>
                <fullName>MariaDB</fullName>
            </value>
            <value>
                <fullName>Microsoft SQL Server</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>PostgreSQL</fullName>
            </value>
            <value>
                <fullName>Redis</fullName>
            </value>
            <value>
                <fullName>SQLite</fullName>
            </value>
            <value>
                <fullName>Other (Please provide a description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>