force-app/main/default/objects/Interview__c/fields/Deployment_Preference__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Preference__c</fullName>
    <description>Service technology solutions can be deployed in several different ways. But which is right for you and which offers the security you require?</description>
    <inlineHelpText>Service technology solutions can be deployed in several different ways. But which is right for you and which offers the security you require?</inlineHelpText>
    <label>Deployment Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On-premises</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>