force-app/main/default/objects/Interview__c/fields/Development_Team_Status__c.field-meta.xml
<CustomField>
    <fullName>Development_Team_Status__c</fullName>
    <label>Development Team Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>We have an existing dev team</fullName>
            </value>
            <value>
                <fullName>We&apos;re looking to add capacity for a dev team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>