force-app/main/default/objects/Interview__c/fields/Domain__c.field-meta.xml
<CustomField>
    <fullName>Domain__c</fullName>
    <label>Business Domain</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales / CRM</fullName>
            </value>
            <value>
                <fullName>Accounting / ERP</fullName>
            </value>
            <value>
                <fullName>Marketing and Communications</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Information Systems &amp; Tech (IST, IS, IT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>