force-app/main/default/objects/Interview__c/fields/Expected_Processes__c.field-meta.xml
<CustomField>
    <fullName>Expected_Processes__c</fullName>
    <label>Expected Processes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-10</fullName>
            </value>
            <value>
                <fullName>10-100</fullName>
            </value>
            <value>
                <fullName>100-500</fullName>
            </value>
            <value>
                <fullName>500-1,000</fullName>
            </value>
            <value>
                <fullName>1,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>