force-app/main/default/objects/Interview__c/fields/Expected_Users__c.field-meta.xml
<CustomField>
    <fullName>Expected_Users__c</fullName>
    <inlineHelpText>How many expected users for the application?</inlineHelpText>
    <label>Expected Users</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - 100</fullName>
            </value>
            <value>
                <fullName>100 - 1,000</fullName>
            </value>
            <value>
                <fullName>1,000 - 10,000</fullName>
            </value>
            <value>
                <fullName>10,000 - 100,000</fullName>
            </value>
            <value>
                <fullName>100,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>