force-app/main/default/objects/Interview__c/fields/New_Featuire_or_New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Featuire_or_New_Product__c</fullName>
    <description>Are you looking to add anew feature to your current software, or is it time for a new product?</description>
    <inlineHelpText>Are you looking to add anew feature to your current software, or is it time for a new product?</inlineHelpText>
    <label>New Featuire or New Product?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New feature on existing software</fullName>
            </value>
            <value>
                <fullName>Open to build a new product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>