force-app/main/default/objects/Interview__c/fields/Other_Cloud_Platform__c.field-meta.xml
<CustomField>
    <fullName>Other_Cloud_Platform__c</fullName>
    <label>Other Cloud Platform</label>
    <length>255</length>
    <type>Text</type>
</CustomField>