force-app/main/default/objects/Interview__c/fields/Other_Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Other_Tech_Stack__c</fullName>
    <label>Other Tech Stack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>