force-app/main/default/objects/Interview__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Azure</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>On-Premise</fullName>
            </value>
            <value>
                <fullName>PEGA</fullName>
            </value>
            <value>
                <fullName>Other (Please provide a description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>