force-app/main/default/objects/Interview__c/fields/Tasks__c.field-meta.xml
<CustomField>
    <fullName>Tasks__c</fullName>
    <inlineHelpText>Do your current users required to complete minute, repetitive tasks that could be automated?</inlineHelpText>
    <label>Tasks</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Never</fullName>
            </value>
            <value>
                <fullName>Rarely</fullName>
            </value>
            <value>
                <fullName>Sometimes</fullName>
            </value>
            <value>
                <fullName>Always</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>