force-app/main/default/objects/Interview__c/fields/Tech_Stack__c.field-meta.xml
<CustomField>
    <fullName>Tech_Stack__c</fullName>
    <description>If existing, what is the tech stack (or rather what programming languages are used, (drop down with other similar to platform. So .net tells us inclined to Miscrosoft whereas java could lean to Salesforce.</description>
    <label>Tech Stack</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Containers</fullName>
            </value>
            <value>
                <fullName>Database (Oracle, SQL, MySQL, etc...)</fullName>
            </value>
            <value>
                <fullName>DevSecOps (Jenkins, Azure DevOps, Anisible, Chef, etc..)</fullName>
            </value>
            <value>
                <fullName>HTML / CSS</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>JavaScript</fullName>
            </value>
            <value>
                <fullName>.NET / C#</fullName>
            </value>
            <value>
                <fullName>Other (Please provide a description)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>