force-app/main/default/objects/Interview__c/recordTypes/No_Code_Low_Code.recordType-meta.xml
<RecordType>
    <fullName>No_Code_Low_Code</fullName>
    <active>true</active>
    <label>No Code / Low Code</label>
</RecordType>